# AI-Cpp-Large-Model-Inference-and-Training-Framework

./: README.md
AI/: CMakeLists.txt  README.md
AI/include/ai/: engine.hpp  layers.hpp  math.hpp  model.hpp  tensor.hpp  transformer.hpp  utils.hpp
AI/src/: engine.cpp  layers.cpp  main.cpp  math.cpp  model.cpp  tensor.cpp  transformer.cpp  utils.cpp
